--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   "dependencies": {
     "ws": "^8.18.1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ofernander/signalk-rec-bms"
+  },
   "engines": {
     "node": ">=10"
   }
